--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
       <div id="outputPane">
         <pre id="generatedCode"><code></code></pre>
         <button id="runButton">Run Barbie Code</button>
+        <div id="barbie-container">
+          <div id="barbie-bubble"></div>
+          <img id="barbie-head" alt="Barbie" />
+        </div>
         <div id="output"></div>
       </div>
       <div id="blocklyDiv"></div>
