splash screen added

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>Blockly Sample App</title>
   </head>
   <body>
+    <div id="splash-screen">
+      <img id="splash-logo" alt="Barbie Lang" />
+    </div>
     <div id="pageContainer">
       <div id="outputPane">
         <pre id="generatedCode"><code></code></pre>
