IT RUNS MERGESORT

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,9 @@
         <pre id="generatedCode"><code></code></pre>
         <button id="runButton">Run Barbie Code</button>
         <div id="barbie-container">
-          <div id="barbie-bubble"></div>
+          <div id="barbie-bubble">Hello! I'm ready to Barbie-code!</div>
           <img id="barbie-head" alt="Barbie" />
         </div>
-        <div id="output"></div>
       </div>
       <div id="blocklyDiv"></div>
     </div>
